--- a/public/css/app.css
+++ b/public/css/app.css
@@ -666,24 +666,6 @@ video {
 .mt-9 {
   margin-top: 2.25rem;
 }
-.mr-2 {
-  margin-right: 0.5rem;
-}
-.mt-1 {
-  margin-top: 0.25rem;
-}
-.mt-14 {
-  margin-top: 3.5rem;
-}
-.mt-\[18rem\] {
-  margin-top: 18rem;
-}
-.mt-\[10rem\] {
-  margin-top: 10rem;
-}
-.mt-\[6rem\] {
-  margin-top: 6rem;
-}
 .mt-\[4rem\] {
   margin-top: 4rem;
 }
@@ -798,41 +780,14 @@ video {
 .w-\[17rem\] {
   width: 17rem;
 }
+.w-\[75rem\] {
+  width: 75rem;
+}
 .w-\[auto\] {
   width: auto;
 }
 .w-full {
   width: 100%;
-}
-.w-11\/12 {
-  width: 91.666667%;
-}
-.w-\[4rem\] {
-  width: 4rem;
-}
-.w-\[14rem\] {
-  width: 14rem;
-}
-.w-\[34rem\] {
-  width: 34rem;
-}
-.w-\[84rem\] {
-  width: 84rem;
-}
-.w-\[80rem\] {
-  width: 80rem;
-}
-.w-\[79rem\] {
-  width: 79rem;
-}
-.w-\[78rem\] {
-  width: 78rem;
-}
-.w-\[77rem\] {
-  width: 77rem;
-}
-.w-\[75rem\] {
-  width: 75rem;
 }
 .max-w-2xl {
   max-width: 42rem;
@@ -874,14 +829,8 @@ video {
 .list-decimal {
   list-style-type: decimal;
 }
-.list-disc {
-  list-style-type: disc;
-}
 .grid-flow-col {
   grid-auto-flow: column;
-}
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1014,10 +963,6 @@ video {
   border-top-left-radius: 0.375rem;
   border-top-right-radius: 0.375rem;
 }
-.rounded-t-xl {
-  border-top-left-radius: 0.75rem;
-  border-top-right-radius: 0.75rem;
-}
 .rounded-bl-full {
   border-bottom-left-radius: 9999px;
 }
@@ -1048,28 +993,8 @@ video {
 .border-t {
   border-top-width: 1px;
 }
-.border-b-0 {
-  border-bottom-width: 0px;
-}
-.border-t-0 {
-  border-top-width: 0px;
-}
 .border-none {
   border-style: none;
-}
-.border-gray-primary {
-  --tw-border-opacity: 1;
-  border-color: rgb(127 140 159 / var(--tw-border-opacity));
-}
-.border-y-gray-birent {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(229 231 235 / var(--tw-border-opacity));
-  border-bottom-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-.border-x-text-error-notification {
-  --tw-border-opacity: 1;
-  border-left-color: rgb(199 8 21 / var(--tw-border-opacity));
-  border-right-color: rgb(199 8 21 / var(--tw-border-opacity));
 }
 .bg-cta-login-birent {
   --tw-bg-opacity: 1;
@@ -1282,9 +1207,6 @@ video {
 .pt-8 {
   padding-top: 2rem;
 }
-.pl-5 {
-  padding-left: 1.25rem;
-}
 .text-left {
   text-align: left;
 }
@@ -1333,10 +1255,6 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
 .font-bold {
   font-weight: 700;
 }
@@ -1366,9 +1284,6 @@ video {
 }
 .leading-7 {
   line-height: 1.75rem;
-}
-.leading-relaxed {
-  line-height: 1.625;
 }
 .text-black-birent {
   --tw-text-opacity: 1;
